# nvim-trainer

./: README.md  TODO.md  exercises.py  main.py  pyproject.toml  run.sh  trainer.py  ui.py
tests/: conftest.py  harness.py  test_exercises.py
