[project]
name = "files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pynvim>=0.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
